--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -2,7 +2,7 @@
   <br>
   <form class="mt-5">
     <label>Sección</label><select #section>
-                            <!-- <option value="tienda">Tienda</option> -->
+                            <option value="recursos">Recursos</option>
                             <option value="ninstalaciones">Instalaciones</option>
                             <option value="noticias">Noticias</option>
                             <option value="cursos">Cursos</option>
@@ -10,9 +10,11 @@
                           </select> <br>
     <label>Título</label><input type="text" #tittle> <br>
     <label>Imagen</label><input type="text" #imagen>  <br>
+    <label>Origen</label><input type="text" #origen>  <br>
     <label>Descripción</label><textarea rows="4" cols="50" type="text" #description></textarea> <br>
+
   </form>
-  <button (click)="addItem(section.value,tittle.value,imagen.value,description.value)" class="mt-5" false>Crear nuevo</button>
+  <button (click)="addItem(section.value,tittle.value,imagen.value,description.value,origen.value)" class="mt-5" false>Crear nuevo</button>
   
   
 
