--- a/src/app/components/recursos/recursos.component.html
+++ b/src/app/components/recursos/recursos.component.html
@@ -3,7 +3,9 @@
 </div>
 <div class="container text-center"><h1>Recursos</h1></div>
 <div class="mt-2">
-  <app-item-list [parent]=this.id></app-item-list>
+  
+    <app-recursos-list></app-recursos-list>
+  
   <button (click)="consola()">text</button>
 </div>
 <app-footer></app-footer>
